# routes/api.php
@@ -9,6 +9,8 @@ use App\Http\Controllers\Api\User\ProductBrowseController;
 use App\Http\Controllers\Api\Admin\OrderController as AdminOrderController;
 use App\Http\Controllers\Api\User\OrderController as UserOrderController;
 use App\Http\Controllers\Api\Admin\NotificationController;
+use App\Http\Controllers\Api\Admin\ReportController;
+use App\Http\Controllers\Api\User\UserController;
 
 
 Route::get('/user', function (Request $request) {
@@ -31,6 +33,8 @@ Route::middleware('auth:sanctum')->group(function () {
         Route::get('/products', [ProductBrowseController::class, 'index']);
         Route::post('/orders', [UserOrderController::class, 'store']);
         Route::get('/my-orders', [UserOrderController::class, 'index']);
+        Route::put('/profile', [UserController::class, 'update']);
+
 
     });
 
@@ -42,9 +46,12 @@ Route::middleware('auth:sanctum')->group(function () {
         Route::get('/users/{id}', [UserManagementController::class, 'show']);
         Route::patch('/users/{id}/status', [UserManagementController::class, 'updateStatus']);
         Route::post('/products', [ProductController::class, 'store']);
+        Route::patch('/products/{id}', [ProductController::class, 'update']);
         Route::patch('/orders/{id}/status', [AdminOrderController::class, 'updateStatus']);
         Route::get('/orders', [AdminOrderController::class, 'index']);
         Route::post('/notifications', [NotificationController::class, 'store']);
+        Route::get('/reports/top-users', [ReportController::class, 'topUsers']);
+        Route::get('/products/{id}/logs', [ProductController::class, 'logs']);
 
     });
 });
